crates/ir/tests/snapshots/lower_test__use_trait_lib.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module use_trait_lib

; extern println

fn main() -> Unit =
  let_join v3(v0: ~Color) =
    let v2: Unit = call println(v0)
    v2
  in
  let v1: ~Color = construct Color::Red#0()
  jump v3(v1)
