crates/ir/tests/snapshots/lower_test__use_user_trait.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module use_user_trait

type Greeting = MkGreeting#0(String)
type Option[e] = Some#0(a) | None#1
type Result[f, g] = Ok#0(c) | Err#1(b)
type List[h] = Cons#0(d, List[d]) | Nil#1
type Point = MkPoint#0(Int, Int)
type Ordering = LT#0 | EQ#1 | GT#2

fn f0 main() -> Unit =
  let v0: ~Greeting = construct Greeting::MkGreeting#0("hi")
  let v1: String = call f48(v0)
  let v2: Unit = call f47(v1)
  v2
